# timeManagmenDesktop

./: CMakeLists.txt  CMakeLists.txt.user.OEwVfB  database.cpp  database.h  database.h.fuOSWr  icons.qrc  insertintableform.cpp  insertintableform.h  insertintableform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.nPuMIF  timeManagmentApplication_ru_RU.ts  updateForm.ui.rKjVUf  updateform.cpp  updateform.h  updateform.ui
